--- a/hNext/hNext.WebClient/Views/Shared/Components/PatientDetails/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/PatientDetails/Default.cshtml
@@ -5,31 +5,31 @@
         <table class="table table-borderless table-sm mt-1 mx-1">
             <tr>
                 <td class="text-right text-nowrap">@Localizer[nameof(Resources.FamilyName)]:</td>
-                <td class="side-tab-field" v-cloak>{{ familyName }}</td>
+                <td class="side-tab-field">{{ familyName }}</td>
             </tr>
             <tr>
                 <td class="text-right text-nowrap">@Localizer[nameof(Resources.FirstName)]:</td>
-                <td class="side-tab-field" v-cloak>{{ firstName }}</td>
+                <td class="side-tab-field">{{ firstName }}</td>
             </tr>
             <tr>
                 <td class="text-right text-nowrap">@Localizer[nameof(Resources.Patronimic)]:</td>
-                <td class="side-tab-field" v-cloak>{{ patronimic }}</td>
+                <td class="side-tab-field">{{ patronimic }}</td>
             </tr>
             <tr>
                 <td class="text-right text-nowrap">@Localizer[nameof(Resources.Gender)]:</td>
-                <td class="side-tab-field" v-cloak>{{ gender }}</td>
+                <td class="side-tab-field">{{ gender }}</td>
             </tr>
             <tr>
                 <td class="text-right text-nowrap">@Localizer[nameof(Resources.DateOfBirth)]:</td>
-                <td class="side-tab-field" v-cloak>{{ dateOfBirth | shortDate }}</td>
+                <td class="side-tab-field">{{ dateOfBirth | shortDate }}</td>
             </tr>
             <tr>
                 <td class="text-right text-nowrap">@Localizer[nameof(Resources.CountryOfBirth)]:</td>
-                <td class="side-tab-field" v-cloak>{{ countryOfBirth }}</td>
+                <td class="side-tab-field">{{ countryOfBirth }}</td>
             </tr>
             <tr>
                 <td class="text-right text-nowrap">@Localizer[nameof(Resources.PlaceOfBirth)]:</td>
-                <td class="side-tab-field" v-cloak>{{ placeOfBirth }}</td>
+                <td class="side-tab-field">{{ placeOfBirth }}</td>
             </tr>
             <tr>
                 <td class="text-right text-nowrap font-weight-bold">@Localizer[nameof(Resources.Address)]</td>
@@ -37,35 +37,35 @@
             </tr>
             <tr>
                 <td class="text-right text-nowrap">@Localizer[nameof(Resources.Country)]:</td>
-                <td class="side-tab-field" v-cloak>{{ addressCountry }}</td>
+                <td class="side-tab-field">{{ addressCountry }}</td>
             </tr>
             <tr>
                 <td class="text-right text-nowrap">@Localizer[nameof(Resources.Region)]:</td>
-                <td class="side-tab-field" v-cloak>{{ addressRegion }}</td>
+                <td class="side-tab-field">{{ addressRegion }}</td>
             </tr>
             <tr>
                 <td class="text-right text-nowrap">@Localizer[nameof(Resources.District)]:</td>
-                <td class="side-tab-field" v-cloak>{{ addressDistrict }}</td>
+                <td class="side-tab-field">{{ addressDistrict }}</td>
             </tr>
             <tr>
                 <td class="text-right text-nowrap" v-text="`${addressCityType || '@Localizer[nameof(Resources.City)]'}:`">
                     @Localizer[nameof(Resources.City)]:
                 </td>
-                <td class="side-tab-field" v-cloak>{{ addressCity }}</td>
+                <td class="side-tab-field">{{ addressCity }}</td>
             </tr>
             <tr>
                 <td class="text-right text-nowrap" v-text="`${addressStreetType || '@Localizer[nameof(Resources.Street)]'}:`">
                     @Localizer[nameof(Resources.Street)]:
                 </td>
-                <td class="side-tab-field" v-cloak>{{ addressStreet }}</td>
+                <td class="side-tab-field">{{ addressStreet }}</td>
             </tr>
             <tr>
                 <td class="text-right text-nowrap">@Localizer[nameof(Resources.Building)]:</td>
-                <td class="side-tab-field" v-cloak>{{ addressBuilding }}</td>
+                <td class="side-tab-field">{{ addressBuilding }}</td>
             </tr>
             <tr>
                 <td class="text-right text-nowrap">@Localizer[nameof(Resources.Apartment)]:</td>
-                <td class="side-tab-field" v-cloak>{{ addressApartment }}</td>
+                <td class="side-tab-field">{{ addressApartment }}</td>
             </tr>
         </table>
     </div>
