--- a/hNext/hNext.WebClient/Views/Shared/Components/PatientSearch/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/PatientSearch/Default.cshtml
@@ -2,83 +2,88 @@
 @model PatientSearchViewModel
 
 <template id="patient-search-template">
-    <div class="f-flex flex-column flex-grow-1 mt-2" v-cloak>
-        <div class="d-flex justify-content-md-between flex-column flex-md-row flex-wrap">
-            <div class="form-group row flex-md-nowrap flex-fill">
-                <label class="col-md-auto col-form-label text-md-right pr-0 ml-md-1" asp-for="Search.Name"></label>
-                <div class="col-md-auto mr-md-2 flex-grow-1 pl-2">
-                    <input class="form-control" asp-for="Search.Name" :disabled="!enabled" v-model="model.name"/>
+    <div>
+        <person-editor v-if="showPersonEditor" @@quit="patientEditorQuited"></person-editor>
+        <div class="f-flex flex-column flex-grow-1 mt-2">
+            <div class="d-flex justify-content-md-between flex-column flex-md-row flex-wrap">
+                <div class="form-group row flex-md-nowrap flex-fill">
+                    <label class="col-md-auto col-form-label text-md-right pr-0 ml-md-1" asp-for="Search.Name"></label>
+                    <div class="col-md-auto mr-md-2 flex-grow-1 pl-2">
+                        <input class="form-control" asp-for="Search.Name" :disabled="searching || !enabled" v-model="model.name" />
+                    </div>
+                </div>
+                <div class="form-group row flex-md-nowrap flex-sm-fill">
+                    <label class="col-md-auto col-form-label text-md-right pr-0 ml-md-1" asp-for="Search.YearOfBirth"></label>
+                    <div class="col-md-auto mr-md-2 flex-grow-1 pl-2">
+                        <select class="form-control" asp-for="Search.YearOfBirth"
+                                asp-items="@new SelectList(Enumerable.Range(DateTime.Today.Year-119, 120).Reverse())"
+                                v-model="model.yearOfBirth" :disabled="searching || !enabled">
+                            <option value=""></option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group row flex-md-nowrap flex-fill">
+                    <label class="col-md-auto col-form-label text-md-right pr-0 ml-md-1" asp-for="Search.RegionId"></label>
+                    <div class="col-md-auto mr-md-2 flex-grow-1 pl-2">
+                        <select class="form-control" asp-for="Search.RegionId"
+                                asp-items="@new SelectList(Model.Regions, nameof(Region.Id), nameof(Region.Name))"
+                                v-model="model.regionId" :disabled="searching || !enabled">
+                            <option value="">@Localizer[nameof(Resources.SelectRegion)]</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group row flex-md-nowrap flex-fill">
+                    <label class="col-md-auto col-form-label text-md-right pr-0 ml-md-1" asp-for="Search.DistrictId"></label>
+                    <div class="col-md-auto mr-md-2 flex-grow-1 pl-2">
+                        <select class="form-control" asp-for="Search.DistrictId"
+                                v-model="model.districtId" :disabled="searching || !enabled">
+                            <option value="">@Localizer[nameof(Resources.SelectDistrict)]</option>
+                            <option v-for="d in districts" :key="d.id" :value="d.id">{{ d.name }}</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group row flex-md-nowrap flex-fill">
+                    <label class="col-md-auto col-form-label text-md-right pr-0 ml-md-1" asp-for="Search.CityId"></label>
+                    <div class="col-md-auto mr-md-2 flex-grow-1 pl-2">
+                        <select class="form-control" asp-for="Search.CityId" v-model="model.cityId" :disabled="searching || !enabled">
+                            <option value="">@Localizer[nameof(Resources.SelectCity)]</option>
+                            <option v-for="c in cities" :key="c.id" :value="c.id">{{ c.name }}</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="d-flex flex-column flex-md-row flex-md-nowrap ml-md-auto">
+                    <button class="btn btn-primary mr-md-1 mb-2 mb-md-0" @@click="searchPatients" :disabled="searching || !enabled">@Localizer[nameof(Resources.Search)]</button>
+                    <button class="btn btn-primary mr-md-2" :disabled="searching || !enabled" @@click="createNewPatient">@Localizer[nameof(Resources.NewPatient)]</button>
                 </div>
             </div>
-            <div class="form-group row flex-md-nowrap flex-sm-fill">
-                <label class="col-md-auto col-form-label text-md-right pr-0 ml-md-1" asp-for="Search.YearOfBirth"></label>
-                <div class="col-md-auto mr-md-2 flex-grow-1 pl-2">
-                    <select class="form-control" asp-for="Search.YearOfBirth"
-                            asp-items="@new SelectList(Enumerable.Range(DateTime.Today.Year-119, 120).Reverse())"
-                            v-model="model.yearOfBirth" :disabled="!enabled">
-                        <option value=""></option>
-                    </select>
-                </div>
+            <div class="mt-2 table-responsive-vertical">
+                <table class="table table-bordered table-hover">
+                    <thead class="thead-light">
+                        <tr>
+                            <th>@Localizer[nameof(Resources.FullName)]</th>
+                            <th>@Localizer[nameof(Resources.YearOfBirth)]</th>
+                            <th>@Localizer[nameof(Resources.Address)]</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr v-for="p in foundPatients" :class="{'selected-table-row' : p.id == selectedPatient.id}"
+                            @@click="selectPatient(p)" @@dblclick="editPatient">
+                            <td>{{ `${p.person.familyName} ${p.person.firstName} ${p.person.patronimic}` }}</td>
+                            <td>{{ p.person.dateOfBirth | shortDate }}</td>
+                            <td>
+                                {{ `${p.person.address.country.name}`
+                                + (p.person.address.region ? `, ${p.person.address.region.name} @Localizer[nameof(Resources.Region)].Value.ToLower()` : '')
+                                + (p.person.address.district ? `, ${p.person.address.district.name} @Localizer[nameof(Resources.District)].Value.ToLower()` : '')
+                                + `, ${p.person.address.city.cityType.name} ${p.person.address.city.name}`
+                                + `, ${p.person.address.street.streetType.name} ${p.person.address.street.name}`
+                                + `, @Localizer[nameof(Resources.Building)].Value.ToLower() ${p.person.address.building}`
+                                + (p.person.address.apartment ? `, @Localizer[nameof(Resources.Apartment)].Value.ToLower() ${p.person.address.apartment}` : '')
+                                }}
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
-            <div class="form-group row flex-md-nowrap flex-fill">
-                <label class="col-md-auto col-form-label text-md-right pr-0 ml-md-1" asp-for="Search.RegionId"></label>
-                <div class="col-md-auto mr-md-2 flex-grow-1 pl-2">
-                    <select class="form-control" asp-for="Search.RegionId"
-                            asp-items="@new SelectList(Model.Regions, nameof(Region.Id), nameof(Region.Name))"
-                            v-model="model.regionId" :disabled="!enabled">
-                        <option value="">@Localizer[nameof(Resources.SelectRegion)]</option>
-                    </select>
-                </div>
-            </div>
-            <div class="form-group row flex-md-nowrap flex-fill">
-                <label class="col-md-auto col-form-label text-md-right pr-0 ml-md-1" asp-for="Search.DistrictId"></label>
-                <div class="col-md-auto mr-md-2 flex-grow-1 pl-2">
-                    <select class="form-control" asp-for="Search.DistrictId"
-                        v-model="model.districtId" :disabled="!enabled">
-                        <option value="">@Localizer[nameof(Resources.SelectDistrict)]</option>
-                        <option v-for="d in districts" :key="d.id" :value="d.id" v-cloak>{{ d.name }}</option>
-                    </select>
-                </div>
-            </div>
-            <div class="form-group row flex-md-nowrap flex-fill">
-                <label class="col-md-auto col-form-label text-md-right pr-0 ml-md-1" asp-for="Search.CityId"></label>
-                <div class="col-md-auto mr-md-2 flex-grow-1 pl-2" >
-                    <select class="form-control" asp-for="Search.CityId" v-model="model.cityId" :disabled="!enabled">
-                        <option value="">@Localizer[nameof(Resources.SelectCity)]</option>
-                        <option v-for="c in cities" :key="c.id" :value="c.id" v-cloak>{{ c.name }}</option>
-                    </select>
-                </div>
-            </div>
-            <div class="d-flex flex-column flex-md-row flex-md-nowrap ml-md-auto">
-                <button class="btn btn-primary mr-md-1 mb-2 mb-md-0" @@click="searchPatients" :disabled="searching || !enabled">@Localizer[nameof(Resources.Search)]</button>
-                <button class="btn btn-primary mr-md-2" :disabled="!enabled" @@click="createNewPatient">@Localizer[nameof(Resources.NewPatient)]</button>
-            </div>
-        </div>
-        <div class="mt-2 table-responsive-vertical">
-            <table class="table table-bordered table-hover">
-                <thead class="thead-light">
-                    <tr>
-                        <th>@Localizer[nameof(Resources.FullName)]</th>
-                        <th>@Localizer[nameof(Resources.YearOfBirth)]</th>
-                        <th>@Localizer[nameof(Resources.Address)]</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr v-for="p in foundPatients" :class="{'selected-table-row' : p.id == selectedPatient.id}"
-                        @@click="selectPatient(p)" @@dblclick="editPatient" v-cloak>
-                        <td>{{ `${p.person.familyName} ${p.person.firstName} ${p.person.patronimic}` }}</td>
-                        <td>{{ p.person.dateOfBirth | shortDate }}</td>
-                        <td>{{ `${p.person.address.country.name}`
-                                    + (p.person.address.region ? `, ${p.person.address.region.name} @Localizer[nameof(Resources.Region)].Value.ToLower()` : '')
-                                    + (p.person.address.district ? `, ${p.person.address.district.name} @Localizer[nameof(Resources.District)].Value.ToLower()` : '')
-                                    + `, ${p.person.address.city.cityType.name} ${p.person.address.city.name}`
-                                    + `, ${p.person.address.street.streetType.name} ${p.person.address.street.name}`
-                                    + `, @Localizer[nameof(Resources.Building)].Value.ToLower() ${p.person.address.building}`
-                                    + (p.person.address.apartment ? `, @Localizer[nameof(Resources.Apartment)].Value.ToLower() ${p.person.address.apartment}` : '')
-                        }}</td>
-                    </tr>
-                </tbody>
-            </table>
         </div>
     </div>
 </template>
