added some logic to address parts selection in personEditor

--- a/hNext/hNext.WebClient/Views/Shared/Components/PatientSearch/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/PatientSearch/Default.cshtml
@@ -61,7 +61,7 @@
                     <thead class="thead-light">
                         <tr>
                             <th>@Localizer[nameof(Resources.FullName)]</th>
-                            <th>@Localizer[nameof(Resources.YearOfBirth)]</th>
+                            <th>@Localizer[nameof(Resources.DateOfBirth)]</th>
                             <th>@Localizer[nameof(Resources.Address)]</th>
                         </tr>
                     </thead>
