--- a/hNext/hNext.WebClient/Views/Shared/Components/PersonEditor/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/PersonEditor/Default.cshtml
@@ -2,7 +2,7 @@
 @model PersonEditorViewModel
 
 <template id="person-editor-template">
-    <div class="d-flex modal-window flex-column">
+    <div class="d-flex modal-window flex-column" :style="{zIndex: level*1000}">
         <div class="d-flex flex-column mb-1">
             <button class="btn btn-danger ml-auto" :disabled="!enabled" @@click="close">
                 <i class="fa fa-times"></i>
@@ -138,7 +138,7 @@
                     </table>
                 </div>
                 <div class="d-flex flex-nowrap mt-2">
-                    <button class="btn btn-primary" :disabled="!enabled">@Localizer[nameof(Resources.Save)]</button>
+                    <button class="btn btn-primary" :disabled="!enabled" @@click="save">@Localizer[nameof(Resources.Save)]</button>
                     <button class="btn btn-danger ml-auto" :disabled="!enabled" @@click="close">@Localizer[nameof(Resources.Cancel)]</button>
                 </div>
             </div>
